# SentinelSight-AI

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  Dockerfile  KNOWN_LIMITATIONS.md  Makefile  PROGRESS.md  README.md  SECURITY.md  SECURITY_AUDIT.md  docker-compose.yml
backend/: pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 202607160001_initial_auth_models.py  202607160002_website_assets.py  202607160003_scans_findings_baselines.py  202607160004_comparison_incidents_audit.py  202607160005_ai_configuration_analysis.py
backend/app/: main.py
backend/app/api/: ai.py  audit.py  auth.py  health.py  incidents.py  scans.py  users.py  websites.py
backend/app/core/: config.py  csrf.py  database.py  enums.py  request_limits.py  security_headers.py
backend/app/models/: __init__.py  ai_analysis.py  ai_configuration.py  audit_entry.py  audit_log.py  baseline.py  finding.py  incident.py  incident_note.py  organization.py  scan.py  user.py  website_asset.py
backend/app/scanners/: comparison_analyzer.py  content_analyzer.py  header_analyzer.py  http_scanner.py  risk_engine.py  scan_orchestrator.py  screenshot_capture.py  tls_analyzer.py  url_validator.py  visual_comparison.py
backend/app/schemas/: ai.py  audit.py  auth.py  incidents.py  scans.py  users.py  websites.py
backend/app/security/: dependencies.py  (+4 more)
backend/tests/: api_client.py  conftest.py  test_ai_configuration.py  test_auth.py  test_comparison_incidents_audit.py  test_health.py  test_rbac_users.py  test_scans.py  test_security_hardening.py  test_websites.py
(+44 files in other folders)
